Fix white space above empty cart wrapper

--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@ body .small-artists .column-top-margin {
     min-height: 80vh;
     padding: 3em 0;
     background-position: bottom center;
+    margin-top: -100px;
 }
 
 /* ===== FOOTER ===== */
